@@ -1,8 +1,10 @@
 package ru.mrchebik.autocomplete;
 
+import ru.mrchebik.autocomplete.database.cluster.letter.classN.AutocompleteClusterLetterClass;
+
 public class EditWord {
     public static StringBuilder word;
-    public static String classN;
+    public static AutocompleteClusterLetterClass classN;
     static int begin;
     static int end;
     static double beginGlobal;
@@ -15,7 +17,7 @@ public class EditWord {
     static void clear() {
         word.setLength(0);
         if (end != -1)
-            begin = end + 1;
+            begin = end;
         else
             begin = -1;
         beginGlobal = -1;
