@@ -1,6 +1,8 @@
 startup=Startup
 new_project_button=New Project
 new_project_title=Choose folder
+open_project_button=Open Project
+open_project_title=Choose folder
 create_button=Create
 edit_button=Edit
 rename_button=Rename
