@@ -1,6 +1,8 @@
 #startup            =Запуск
 #new_project_button =Новый проект
 #new_project_title  =Выберите файл
+#open_project_button=Открыть проект
+#open_project_title =Выберите файл
 #create_button      =Создать
 #edit_button        =Изменить
 #rename_button      =Переименовать
@@ -22,6 +24,8 @@
 startup=\u0417\u0430\u043f\u0443\u0441\u043a
 new_project_button=\u041d\u043e\u0432\u044b\u0439 \u043f\u0440\u043e\u0435\u043a\u0442
 new_project_title=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u0444\u0430\u0439\u043b
+open_project_button=\u041e\u0442\u043a\u0440\u044b\u0442\u044c \u043f\u0440\u043e\u0435\u043a\u0442
+open_project_title=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u0444\u0430\u0439\u043b
 create_button=\u0421\u043e\u0437\u0434\u0430\u0442\u044c
 edit_button=\u0418\u0437\u043c\u0435\u043d\u0438\u0442\u044c
 rename_button=\u041f\u0435\u0440\u0435\u0438\u043c\u0435\u043d\u043e\u0432\u0430\u0442\u044c
