@@ -1,6 +1,8 @@
 #startup            =Запуск
 #new_project_button =Новий проект
 #new_project_title  =Виберіть файл
+#open_project_button=Відкрити проект
+#open_project_title =Виберіть файл
 #create_button      =Створити
 #edit_button        =Змінити
 #rename_button      =Перейменувати
@@ -22,6 +24,7 @@
 startup=\u0417\u0430\u043f\u0443\u0441\u043a
 new_project_button=\u041d\u043e\u0432\u0438\u0439 \u043f\u0440\u043e\u0435\u043a\u0442
 new_project_title=\u0412\u0438\u0431\u0435\u0440\u0456\u0442\u044c \u0444\u0430\u0439\u043b
+open_project_button=\u0412\u0456\u0434\u043a\u0440\u0438\u0442\u0438 \u043f\u0440\u043e\u0435\u043a\u0442
 create_button=\u0421\u0442\u0432\u043e\u0440\u0438\u0442\u0438
 edit_button=\u0417\u043c\u0456\u043d\u0438\u0442\u0438
 rename_button=\u041f\u0435\u0440\u0435\u0439\u043c\u0435\u043d\u0443\u0432\u0430\u0442\u0438
